--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
 
     <section class="container secundario">
-        <img src="img/Notebook.png" alt="Imagem notebook com Alura cursos" class="secundario_imagem">
+        <img src="img/Notebook.png" alt="Imagem notebook com Alura cursos" class="secundario__imagem">
         <div class="container__descricao">
             <h1 class="descricao__titulo">Baixe seus cursos</h1>
             <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
